guacamole/oauth2-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-auth
  namespace: guacamole
spec:
  forwardAuth:
    address: http://oauth2-proxy.oauth2-proxy.svc.cluster.local:4180/
    authResponseHeaders:
    - X-Auth-User
    - X-Auth-Email
    - X-Auth-Name
    - X-Auth-Uid
    trustForwardHeader: true
